--- a/.editorconfig
+++ b/.editorconfig
@@ -4,5 +4,9 @@ insert_final_newline = true
 charset = utf-8
 trim_trailing_whitespace = true
 
+[*.{kt,kts}]
+ij_kotlin_allow_trailing_comma = true
+ij_kotlin_allow_trailing_comma_on_call_site = true
+
 [*.md]
 trim_trailing_whitespace = false
