--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,6 +6,8 @@ concurrency: ci-${{ github.ref }}
 
 jobs:
   publish:
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
     if: "!contains(github.event.head_commit.message, 'ci-skip')"
     steps:
