--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,10 +19,10 @@ jobs:
           cache: gradle
       - name: Generate build number
         id: buildnumber
-        uses: onyxmueller/build-tag-number@v1
+        uses: onyxmueller/build-tag-number@v1.0.2
         with:
           token: ${{ secrets.github_token }}
-          prefix: ${{ github.ref }}
+          prefix: ${{ github.ref_name }}
       - name: Publish
         uses: uTen2c/publish-to-github@v1.1
         with:
