--- a/.editorconfig
+++ b/.editorconfig
@@ -3,6 +3,8 @@ end_of_line = lf
 insert_final_newline = true
 charset = utf-8
 trim_trailing_whitespace = true
+max_line_length = 9999
+ij_visual_guides = 120
 
 [*.{kt,kts}]
 ij_kotlin_allow_trailing_comma = true
